# hcex

./: CMakeLists.txt  README.md
hcex/source/bungie_net/common/: message_header.c  thread.h  thread_win32.c
hcex/source/bungie_net/network/: transport.h  transport_endpoint_set_winsock.c
hcex/source/cseries/: cseries.c  cseries.h  cseries_windows.c  cseries_windows.h  debug_memory.c  debug_memory.h  errors.c  errors.h  platform.h  sort.c  stack_walk_windows.c
hcex/source/input/: input.h  input_abstraction.c  input_abstraction.h  input_device_defaults.c
hcex/source/interface/: terminal.c  terminal.h
hcex/source/memory/: array.c  array.h  bitstream.c  byte_swapping.c  byte_swapping.h  crc.c  crc.h  data.c  data.h  data_encoding.c  data_packet_groups.c  data_packets.c  lruv_cache.c  memory_pool.c  memory_pool.h  stack_memory_pool.c
hcex/source/memory/zlib/: gzio.c
hcex/source/saved games/: game_state.c  game_state_procs.h  game_state_xbox.c  player_profile.c  player_profile.h  playlist_profile.c  saved_game_files_pc.c
hcex/source/shell/: shell.c  shell.h  shell_xbox.c
hcex/source/tag_files/: files.c  files.h  files_windows_xbox.c  tag_files.c  tag_files.h  tag_groups.c  tag_groups.h
